# stitch

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  docker-compose.yml  pyproject.toml  redis.sh
.github/workflows/: lint.yaml
ares/: README.md  go.mod  go.sum  main.go
ares/pkg/shredder/: chunker.go  chunker_test.go
ares/pkg/squish/: xz.go  xz_test.go
ares/pkg/xz/: xz.go  xz_test.go
ares/utils/: utils.go
audio-encoder/: decoder.py  encoder.py
constructor/: .gitignore  go.mod  go.sum  main.go
constructor/decoded_outputs/: decoded_data
constructor/pkg/: construct.go
constructor/pkg/shredder/: chunker.go
fe/: README.md  go.mod  go.sum  main.go
fe/form/: fe.go
fe/utils/: utils.go
qrProcessor/: pyproject.toml
qrprocessor/: README.md  decoded  decoder.py  encoderMain.py  encoderWorker.py  pyproject.toml  redis-utils.py  run.py  setup.py  stageqr.py  worker.py
qrprocessor/demos/: blendQRCode.py
qrprocessor/src/qrprocessor/: __init__.py
qrprocessor/utils/: Cornors.py  DecodeQR.py  ImageEncoder.py  redis-utils.py  redis_utils.py
shared/go/: go.mod  shared.go
src/stitch/: __init__.py
styx/: Dockerfile  README.md  redis.conf
