[project]
name = "stitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.3",
    "pre-commit>=3.8.0",
    "types-setuptools>=74.0.0.20240831",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
